--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,82 +1,181 @@
-/* css styles */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+
+  
+
 /* Global Styles */
+
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+
+font-family: 'Roboto Condensed', sans-serif;
+
 }
+
+  
 
 /* Variables */
+
 :root {
-  --pumpkin-50: #fff7ed;
-  --pumpkin-100: #feecd6;
-  --pumpkin-200: #fcd5ac;
-  --pumpkin-300: #fab777;
-  --pumpkin-400: #f78e40;
-  --pumpkin-500: #f47321;
-  --pumpkin-600: #e55611;
-  --pumpkin-700: #be3f10;
-  --pumpkin-800: #973315;
-  --pumpkin-900: #7a2c14;
-  --pumpkin-950: #421408;
+
+--pumpkin-50: #fff7ed;
+
+--pumpkin-100: #feecd6;
+
+--pumpkin-200: #fcd5ac;
+
+--pumpkin-300: #fab777;
+
+--pumpkin-400: #f78e40;
+
+--pumpkin-500: #f47321;
+
+--pumpkin-600: #e55611;
+
+--pumpkin-700: #be3f10;
+
+--pumpkin-800: #973315;
+
+--pumpkin-900: #7a2c14;
+
+--pumpkin-950: #421408;
+
 }
+
+  
 
 /* Navigation Bar */
+
 .navbar {
-  background: var(--pumpkin-500); /* Gradient from 400 to 100 */
+
+background: var(--pumpkin-500); /* Gradient from 400 to 100 */
+
 }
 
+  
+
 .navbar-title {
-  font-weight: bold;
-  color: var(--pumpkin-900);  /* Color for the title */
+
+font-weight: bold;
+
+color: var(--pumpkin-900); /* Color for the title */
+
 }
+
+  
 
 /* Variables */
+
 :root {
-  --pumpkin-50: #fff7ed;
-  --pumpkin-100: #feecd6;
-  --pumpkin-200: #fcd5ac;
-  --pumpkin-300: #fab777;
-  --pumpkin-400: #f78e40;
-  --pumpkin-500: #f47321;
-  --pumpkin-600: #e55611;
-  --pumpkin-700: #be3f10;
-  --pumpkin-800: #973315;
-  --pumpkin-900: #7a2c14;
-  --pumpkin-950: #421408;
+
+--pumpkin-50: #fff7ed;
+
+--pumpkin-100: #feecd6;
+
+--pumpkin-200: #fcd5ac;
+
+--pumpkin-300: #fab777;
+
+--pumpkin-400: #f78e40;
+
+--pumpkin-500: #f47321;
+
+--pumpkin-600: #e55611;
+
+--pumpkin-700: #be3f10;
+
+--pumpkin-800: #973315;
+
+--pumpkin-900: #7a2c14;
+
+--pumpkin-950: #421408;
+
+--bs-primary: #421408;
+
+--bs-blue: #421408;
+
+--mermaid-label-fg-color: #421408;
+
 }
+
+  
 
 /* Navigation Bar */
+
 .navbar {
-  background: var(--pumpkin-500); /* Gradient from 400 to 100 */
+
+background: var(--pumpkin-500); /* Gradient from 400 to 100 */
+
 }
 
+  
+
 .navbar-title {
-  font-weight: bold;
-  color: var(--pumpkin-900);  /* Color for the title */
+
+font-weight: bold;
+
+color: var(--pumpkin-900); /* Color for the title */
+
 }
+
+  
 
 /* Global hyperlink styles */
+
 a {
-    color: var(--pumpkin-600);
-    text-decoration: none;  /* Optional: remove underline */
-  }
 
-  #TOC {
-    color: var(--pumpkin-900);
-  }
+color: var(--pumpkin-600);
 
-#TOC a:hover {
-  color: var(--pumpkin-900);
-
-}#TOC a:hover
-{   
-  text-decoration: none;
-  color: var(--pumpkin-900);
 }
 
+  
+
 a:hover
-{   
-  text-decoration: none;
-  color: var(--pumpkin-900);
+
+{
+
+color: var(--pumpkin-800);
+
+}
+
+  
+
+.sidebar nav[role=doc-toc] ul>li>a.active, .sidebar nav[role=doc-toc] ul>li>ul>li>a.active {
+
+border-left: 1px solid var(--pumpkin-500);
+
+color: var(--pumpkin-500) !important;
+
+}
+
+  
+
+.sidebar nav[role=doc-toc] ul>li>a:hover, .sidebar nav[role=doc-toc] ul>li>ul>li>a:hover {
+
+color: var(--pumpkin-500) !important;
+
+}
+
+  
+
+h1 {
+
+font-family: 'Ubuntu', sans-serif;
+
+font-weight: 500;
+
+font-size: 2rem;
+
+}
+
+  
+
+h2 {
+
+font-family: 'Ubuntu', sans-serif;
+
+font-weight: 500;
+
+font-size: 1.2rem;
+
 }
