--- a/docs/styles.css
+++ b/docs/styles.css
@@ -48,14 +48,14 @@ a:hover {
 h1 {
   font-family: 'Acme', sans-serif;
   color: black;
-  font-weight: 500;
-  font-size: 2.3rem;
+  font-weight: 900;
+  font-size: 2.8rem;
 }
 
 h2 {
   font-family: 'Acme', sans-serif;
   color: #060505;
-  font-weight: 500;
+  font-weight: 800;
   font-size: 1.7rem;
 }
 
@@ -77,3 +77,10 @@ h3 {
   font-size: 1.1rem;
   background-color: #fffeff;
 }
+
+.navbar-title:hover {
+  color:#d913ff;
+  font-size: 2.75rem;
+  transition: 0.8s;
+}
+
