Added Konrad Lorenz and clean

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,7 +20,8 @@ body {
   font-weight: bold;
   font-size: 2.7rem;
   color: #39FF13;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Acme', 
+  sans-serif;
 }
 
 /* Links */
